group 'spark'
version '1.0-SNAPSHOT'

apply plugin: 'groovy'
apply plugin: 'java'
apply plugin: 'scala'

sourceCompatibility = 1.5

repositories {
    mavenCentral()
}

dependencies {
    compile 'org.codehaus.groovy:groovy-all:2.3.11'
    compile group: 'org.scala-lang', name: 'scala-library', version: '2.10.6'
    compile group: 'org.apache.spark', name: 'spark-core_2.10', version: '1.6.2'
    compile group: 'org.apache.spark', name: 'spark-sql_2.10', version: '1.6.2'

    testCompile group: 'junit', name: 'junit', version: '4.11'
}

sourceSets {
    main {
        scala {
            srcDirs = ['src/main/scala']
        }
    }
    test {
        scala {
            srcDirs = ['test/scala']
        }
    }

    tasks.withType(ScalaCompile) {
        configure(scalaCompileOptions.forkOptions) {
            memoryMaximumSize = '1g'
            jvmArgs = ['-XX:MaxPermSize=512m']
        }
    }

    tasks.withType(ScalaCompile) {
        scalaCompileOptions.with {
            force = true
        }
    }

    task run(type: JavaExec, dependsOn: classes) {
        main = 'HelloWorld'
        classpath sourceSets.main.runtimeClasspath
        classpath configurations.runtime
    }
}
